--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home Change", icon: home}
+  - {file: "Ian Hicks Resume 2023 ATS.pdf", title: "Resume"}
   - {file: "README.md", title: "About"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
