--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Ian Hicks"
 author: "Ian Hicks"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+description: "Ian Hicks"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
