--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "/Ian Hicks Resume 2023 ATS.pdf", title: "Resume"} 
   - {file: "README.md", title: "About"}
+  - {file: "Blog.md", title: "Blog"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:ianjameshicks@gmail.com"}
