--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:ianjameshicks@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/ijhicks"}
-  - {title: LinkedIn, icon: fa-linked, url: "https://www.linkedin.com/in/ian-hicks-80381212/"}
+  - {title: LinkedIn, icon: fa-linkedin, url: "https://www.linkedin.com/in/ian-hicks-80381212/"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
