--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Ian Hicks"
 author: "Ian Hicks"
-description: "Ian Hicks"
+description: "Ian Hicks 2023"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
